[fix] Fix text overflow on nori

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -374,7 +374,7 @@ input {
   padding-top: 10px;
   padding-bottom: 10px;
   max-height: 100%;
-  /*overflow-y: scroll;*/
+  overflow-y: scroll;
 }
 
 .card-front {
